--- a/3-way/CMakeLists.txt
+++ b/3-way/CMakeLists.txt
@@ -7,3 +7,5 @@ file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 add_executable(3-Way ${HEADERS} ${SOURCES})
 
+createSTDModules(${CMAKE_CURRENT_BINARY_DIR})
+
