--- a/coroutine/CMakeLists.txt
+++ b/coroutine/CMakeLists.txt
@@ -7,3 +7,5 @@ file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 add_executable(Coroutine ${HEADERS} ${SOURCES})
 
+createSTDModules(${CMAKE_CURRENT_BINARY_DIR})
+
