--- a/concepts/CMakeLists.txt
+++ b/concepts/CMakeLists.txt
@@ -7,3 +7,5 @@ file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 add_executable(Concepts ${HEADERS} ${SOURCES})
 
+createSTDModules(${CMAKE_CURRENT_BINARY_DIR})
+
