--- a/3-way/CMakeLists.txt
+++ b/3-way/CMakeLists.txt
@@ -7,5 +7,7 @@ file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 add_executable(3-Way ${HEADERS} ${SOURCES})
 
-createSTDModules(${CMAKE_CURRENT_BINARY_DIR})
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} iostream)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} vector)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} source_location)
 
