--- a/ranges/CMakeLists.txt
+++ b/ranges/CMakeLists.txt
@@ -7,5 +7,8 @@ file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 add_executable(Ranges ${HEADERS} ${SOURCES})
 
-createSTDModules(${CMAKE_CURRENT_BINARY_DIR})
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} iostream)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} vector)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} ranges)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} initializer_list)
 
