iterator added in range example

--- a/ranges/CMakeLists.txt
+++ b/ranges/CMakeLists.txt
@@ -11,4 +11,5 @@ createSTDModule(${CMAKE_CURRENT_BINARY_DIR} iostream)
 createSTDModule(${CMAKE_CURRENT_BINARY_DIR} vector)
 createSTDModule(${CMAKE_CURRENT_BINARY_DIR} ranges)
 createSTDModule(${CMAKE_CURRENT_BINARY_DIR} initializer_list)
+createSTDModule(${CMAKE_CURRENT_BINARY_DIR} iterator)
 
