--- a/ranges/CMakeLists.txt
+++ b/ranges/CMakeLists.txt
@@ -2,8 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Ranges)
 
-file (GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")
 file (GLOB HEADERS CONFIGURE_DEPENDS "*.h")
+
+set(SOURCES
+    iterator_example.cpp
+    view_example.cpp
+    main.cpp)
 
 add_executable(Ranges ${HEADERS} ${SOURCES})
 
